feat: Write up on the work

--- a/Kusama Collateral Thresolds.ipynb
+++ b/Kusama Collateral Thresolds.ipynb
@@ -2,10 +2,57 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "280b6c95",
+   "id": "76d4517e",
+   "metadata": {},
+   "source": [
+    "# Introduction\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08e8c234",
+   "metadata": {},
+   "source": [
+    "This work analyses the historic data of KSM, DOT and BTC in order to decide on security parameters for the Kintsugi bridge. The code is general enough such that inspecting a new collateral asset can be done with minimal effort.\n",
+    "\n",
+    "Historic price data is gathered from Coingecko, while order book data is collected from the Binance API. Binance is preferred over the other centralized exchanges because it has by far the largest trading volume (https://coinmarketcap.com/rankings/exchanges/).\n",
+    "\n",
+    "There are two approaches that have been combined to arrive at a secure configuration, each applied conservatively. One applies and improves on the approach from the Gudgeon et al's DeFi Crisis paper (https://arxiv.org/pdf/2002.08099.pdf), which models price trajectories as stochastic processes. The other, Value at Risk (VaR), is a well-established method of quantifying financial losses. \n",
+    "\n",
+    "The parameters comprising the security configuration are: DEBT_CEILING_USD, LIQUIDATION_THRESHOLD, SECURE_THRESHOLD. The bridge also uses a PREMIUM_REDEEM_THRESHOLD to increase system security, but premium redeems are assumed not to occur in order to better capture tail risk. Of the three parameters, the first two are selected using the stochastic simulation while the last one is selected using VaR. Given the secure threshold has little bearing on the output of the simulation, its value is determined by VaR to have 99% confidence that a single-day devaluation of the collateral asset will not take vaults below the liquidation threshold.\n",
+    "\n",
+    "Vaults are modelled as a single entity that mints the maximum wrapped amount on the first simulated day, at the secure threshold. This is a pessimistic assumption aimed at fully stress-testing the system.\n",
+    "\n",
+    "One step of the simulation generates multiple price trajectories for both the collateral and the wrapped asset. Then, the worst trajectory of the collateral asset is picked. To match historic observation, a price trajectory for the wrapped asset is selected to produce a correlation as close to the real one as possible.\n",
+    "\n",
+    "If, on any day, vaults fall below the liquidation ratio, their entire collateral is seized by the liquidation vault, causing the 1:1 peg to be destabilised. This is because vaults no longer have something to lose when stealing the BTC in their wallet. At this point, the \"debt\" in the system can only be liquidated by arbitrageurs who burn wrapped tokens in exchange for collateral at a beneficial rate. How beneficial this rate is is initially decided by the liquidation threshold, but if the backing asset keeps decreasing in value arbitrage profits can reach zero. In the event that the liquidation vault becomes undercollateralized, the relative value of the wrapped tokens to BTC would be equal to the collateralization rate.\n",
+    "\n",
+    "Another conservative assumption is that liquidators mint their own wrapped tokens, thus requiring liquidity in both collateral and BTC. Although Gudgeon et al's paper assumes liquidity is equal to the daily traded volume, this works takes the more thorough approach of training a transaction cost (slippage) model. This is also in spite of simpler solutions being available, such as incorporating the bid-ask spread to obtain a liquidity-adjusted VaR. The larger the debt ceiling in the bridge, the more likely it is that liquidiators will move the market, and the liquidity-adjusted VaR would not have captured this insight. For invidividual KSM trades, which achieve small volumes compared to DOT, there is close to zero correlation between buy order amount (buyer-is-taker) and price movement. However, correlation appears when consecutive buy order are considered (with no sells in-between). After some manual filtering, the slippage model is trained on the most extreme of these data points.\n",
+    "\n",
+    "In a similar work, Gauntlet (https://medium.com/gauntlet-networks/karura-parameter-recommendation-methodology-6ce7fe06cb77) also train a price impact model to measure how quickly the market recovers after large trades. The many pessimistic assumptions made in this analysis are considered to suffice and price is considered to stabilise by the next day, following the aforementioned trajectory. \n",
+    "\n",
+    "Among the improvements to be made in the future are the training of a price impact model and the aggregation of order book data from multiple exchanges. Moreover, the impact of buying wrapped tokens with collateral tokens on decentralized exchanges can also be modelled, and a custom loss function should be implemented for sci-kit learn, that prioritises exreme data points."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4b7754d",
    "metadata": {},
    "source": [
     "# Data reading and processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af4113c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# KSM/USD daily (01/01/2021 - 09/09/2021): https://api.coingecko.com/api/v3/coins/kusama/market_chart/range?vs_currency=usd&from=1609459200&to=1631189591\n",
+    "# DOT/USD daily (01/01/2021 - 09/09/2021): https://api.coingecko.com/api/v3/coins/polkadot/market_chart/range?vs_currency=usd&from=1609459200&to=1631189591\n",
+    "# Bitcoin/USD daily (01/01/2021 - 09/09/2021): https://api.coingecko.com/api/v3/coins/bitcoin/market_chart/range?vs_currency=usd&from=1609459200&to=1631189591\n",
+    "# `./download_trades` script made to download Binance data"
    ]
   },
   {
@@ -1016,11 +1063,6 @@
     "    return cleaned_df\n",
     "\n",
     "\n",
-    "# KSM/USD daily (01/01/2021 - 09/09/2021): https://api.coingecko.com/api/v3/coins/kusama/market_chart/range?vs_currency=usd&from=1609459200&to=1631189591\n",
-    "# DOT/USD daily (01/01/2021 - 09/09/2021): https://api.coingecko.com/api/v3/coins/polkadot/market_chart/range?vs_currency=usd&from=1609459200&to=1631189591\n",
-    "# Bitcoin/USD daily (01/01/2021 - 09/09/2021): https://api.coingecko.com/api/v3/coins/bitcoin/market_chart/range?vs_currency=usd&from=1609459200&to=1631189591\n",
-    "# `./download_trades` script made to download Binance data\n",
-    "\n",
     "ksm_to_usd_daily = get_usd_timeseries(\"kusama_to_usd_daily_2021.json\")\n",
     "ksm_usd_returns_daily = prices_to_returns(ksm_to_usd_daily)\n",
     "\n",
@@ -1055,7 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": 344,
-   "id": "4603ef24",
+   "id": "1adc444c",
    "metadata": {},
    "outputs": [
     {
@@ -1930,7 +1972,7 @@
   {
    "cell_type": "code",
    "execution_count": 342,
-   "id": "8eb963d5",
+   "id": "7fe528ec",
    "metadata": {},
    "outputs": [
     {
@@ -2835,7 +2877,7 @@
   {
    "cell_type": "code",
    "execution_count": 345,
-   "id": "dcc02c43",
+   "id": "bd64a864",
    "metadata": {},
    "outputs": [
     {
@@ -3710,7 +3752,7 @@
   {
    "cell_type": "code",
    "execution_count": 348,
-   "id": "150c425c",
+   "id": "15ca9744",
    "metadata": {},
    "outputs": [
     {
@@ -4605,7 +4647,7 @@
   {
    "cell_type": "code",
    "execution_count": 346,
-   "id": "26f866c5",
+   "id": "50ed286a",
    "metadata": {},
    "outputs": [
     {
@@ -5480,7 +5522,7 @@
   {
    "cell_type": "code",
    "execution_count": 347,
-   "id": "9c1d9d12",
+   "id": "027ebf5f",
    "metadata": {},
    "outputs": [
     {
@@ -6415,7 +6457,7 @@
   {
    "cell_type": "code",
    "execution_count": 349,
-   "id": "747587d3",
+   "id": "7089933e",
    "metadata": {},
    "outputs": [
     {
