fix: Include picked configuration in write-up

--- a/Kusama Collateral Thresolds.ipynb
+++ b/Kusama Collateral Thresolds.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "76d4517e",
+   "id": "f0559929",
    "metadata": {},
    "source": [
     "# Introduction\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08e8c234",
+   "id": "5a529727",
    "metadata": {},
    "source": [
     "This work analyses the historic data of KSM, DOT and BTC in order to decide on security parameters for the Kintsugi bridge. The code is general enough such that inspecting a new collateral asset can be done with minimal effort.\n",
@@ -31,12 +31,19 @@
     "\n",
     "In a similar work, Gauntlet (https://medium.com/gauntlet-networks/karura-parameter-recommendation-methodology-6ce7fe06cb77) also train a price impact model to measure how quickly the market recovers after large trades. The many pessimistic assumptions made in this analysis are considered to suffice and price is considered to stabilise by the next day, following the aforementioned trajectory. \n",
     "\n",
-    "Among the improvements to be made in the future are the training of a price impact model and the aggregation of order book data from multiple exchanges. Moreover, the impact of buying wrapped tokens with collateral tokens on decentralized exchanges can also be modelled, and a custom loss function should be implemented for sci-kit learn, that prioritises exreme data points."
+    "Among the improvements to be made in the future are the training of a price impact model and the aggregation of order book data from multiple exchanges. Moreover, the impact of buying wrapped tokens with collateral tokens on decentralized exchanges can also be modelled, and a custom loss function should be implemented for sci-kit learn, that prioritises exreme data points.\n",
+    "\n",
+    "Finally, the selected parameters for Kintsugi are:\n",
+    "```\n",
+    "DEBT_CEILING_USD = 20_000_000\n",
+    "LIQUIDATION_THRESHOLD = 2.0\n",
+    "SECURE_THRESHOLD = 2.5\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e4b7754d",
+   "id": "3aa4b30d",
    "metadata": {},
    "source": [
     "# Data reading and processing"
@@ -45,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af4113c1",
+   "id": "1a039689",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1097,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": 344,
-   "id": "1adc444c",
+   "id": "03f7c87e",
    "metadata": {},
    "outputs": [
     {
@@ -1972,7 +1979,7 @@
   {
    "cell_type": "code",
    "execution_count": 342,
-   "id": "7fe528ec",
+   "id": "68950eef",
    "metadata": {},
    "outputs": [
     {
@@ -2877,7 +2884,7 @@
   {
    "cell_type": "code",
    "execution_count": 345,
-   "id": "bd64a864",
+   "id": "7ee3745c",
    "metadata": {},
    "outputs": [
     {
@@ -3752,7 +3759,7 @@
   {
    "cell_type": "code",
    "execution_count": 348,
-   "id": "15ca9744",
+   "id": "2c27f07f",
    "metadata": {},
    "outputs": [
     {
@@ -4647,7 +4654,7 @@
   {
    "cell_type": "code",
    "execution_count": 346,
-   "id": "50ed286a",
+   "id": "ab7acad2",
    "metadata": {},
    "outputs": [
     {
@@ -5522,7 +5529,7 @@
   {
    "cell_type": "code",
    "execution_count": 347,
-   "id": "027ebf5f",
+   "id": "9077e3b1",
    "metadata": {},
    "outputs": [
     {
@@ -6457,7 +6464,7 @@
   {
    "cell_type": "code",
    "execution_count": 349,
-   "id": "7089933e",
+   "id": "f5176cd1",
    "metadata": {},
    "outputs": [
     {
