docs: Add explanation for annualizing standard deviation in print statements

--- a/main.ipynb
+++ b/main.ipynb
@@ -26,7 +26,7 @@
     "ausd_pair = Token_Pair(base_currency, quote_currency)\n",
     "ausd_pair.get_prices()\n",
     "ausd_pair.calculate_returns()\n",
-    "print(f\"aUSD/USD had an annualized std of {ausd_pair.returns.std()[0] *365**0.5}\")\n",
+    "print(f\"aUSD/USD had an annualized std of {ausd_pair.returns.std()[0] *365**0.5}\") # the std scaled by the square-root of time, 365 days to annulize it, **0.5 to square it\n",
     "print(f\"aUSD/USD had an annualized mean return of {ausd_pair.calculate_mean_return()}\")\n",
     "# We can disregard the mean return as it is assumed to be 0 for stable coins due to arbitrage\n",
     "# We have to take into consideration the standard deviation of the price, which we will\n",
@@ -60,7 +60,7 @@
     "btc_pair.get_prices(start_date=\"2017-07-01\", inverse=True)\n",
     "btc_pair.calculate_returns()\n",
     "\n",
-    "print(f\"USD/BTC had an annualized std of {btc_pair.returns.std()[0] *365**0.5}\")\n",
+    "print(f\"USD/BTC had an annualized std of {btc_pair.returns.std()[0] *365**0.5}\") # the std scaled by the square-root of time, 365 days to annulize it, **0.5 to square it\n",
     "print(f\"USD/BTC had an annualized mean return of {btc_pair.calculate_mean_return()}\")"
    ]
   },
