improvement: re-run simulations with shorter time maturities

--- a/btc_ausd_analysis.ipynb
+++ b/btc_ausd_analysis.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "aUSD/USD had an annualized std of 0.20904263628981912\n",
-      "aUSD/USD had an annualized mean return of 0.025563577655816738\n"
+      "aUSD/USD had an annualized std of 0.21117746112243832\n",
+      "aUSD/USD had an annualized mean return of -0.03614766099111966\n"
      ]
     }
    ],
@@ -35,15 +35,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "USD/BTC had an annualized std of 0.8146456750840788\n",
-      "USD/BTC had an annualized mean return of -0.3436718928528144\n"
+      "USD/BTC had an annualized std of 0.8147478220639823\n",
+      "USD/BTC had an annualized mean return of -0.3460269656052989\n"
      ]
     }
    ],
@@ -66,14 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The estimated liquidation threshold is ~537% of the debt value\n"
+      "The estimated liquidation threshold is ~169% of the debt value\n"
      ]
     }
    ],
@@ -81,44 +81,44 @@
     "\n",
     "# We adjust the variance by adding the covariance of the aUSD/USD pair.\n",
     "corr = ausd_pair.returns.corrwith(btc_pair.returns)\n",
-    "cov = corr * (btc_pair.returns.std()[0] *365**0.5) * (ausd_pair.returns.std()[0] *365**0.5)\n",
-    "# daily var scaled to a year, add 2*covariance and take the square root to get the std\n",
-    "adj_btc_std = (btc_pair.returns.var()[0] *365 + 2 * cov) ** 0.5\n",
+    "cov = corr * btc_pair.returns.std()[0] * ausd_pair.returns.std()[0]\n",
+    "# daily var, add 2*covariance and take the square root to get the std\n",
+    "adj_btc_std = (btc_pair.returns.var()[0] + 2 * cov) ** 0.5\n",
     "\n",
     "# Initialize and run the simulation: Each path represents the price change of the collateral/debt\n",
-    "# We simulate 10,000 trajectories with a duration of 1 year and 365 trading days\n",
+    "# We simulate 10,000 trajectories with a duration of 10 days and 24 hours each\n",
     "# and assume a normal distribution (GBM) with the mean and std of bitcoin over the past 5 years\n",
     "sim = Simulation(btc_pair, strategy=\"GBM\")\n",
-    "sim.simulate(steps=365,\n",
-    "             maturity=1,\n",
+    "sim.simulate(steps=24,\n",
+    "             maturity=21,\n",
     "             n_simulations=10_000,\n",
     "             initial_value=1,\n",
     "             sigma=adj_btc_std[0],\n",
-    "             mu=btc_pair.calculate_mean_return(type=\"arithmetic\"))\n",
+    "             mu=btc_pair.calculate_mean_return(type=\"arithmetic\", standardization_period=\"daily\"))\n",
+    "\n",
     "\n",
     "# Analize the results\n",
     "# Initialize the analysis\n",
     "simple_analysis = Analysis(sim)\n",
     "\n",
     "# This gives us the secure threshold multiplier, stating that:\n",
-    "# The collateral/debt ratio will fall below 1 only with a 10% chance in a year or...\n",
-    "# We should see this happening once every ~10 years.\n",
+    "# The collateral/debt ratio will fall below 1 only with a 1% chance in 21 days or...\n",
     "# This assumes no premium redeem, additional collateralization or liquidation.\n",
-    "secure_threshold = simple_analysis.get_threshold_multiplier(alpha=0.90) # <- this can be changed ofc \n",
+    "liquidation_threshold = simple_analysis.get_threshold_multiplier(alpha=0.99) # <- this can be changed ofc \n",
     "\n",
-    "print(f\"The estimated liquidation threshold is ~{int(secure_threshold * 100)}% of the debt value\")"
+    "print(f\"The estimated liquidation threshold is ~{int(liquidation_threshold * 100)}% of the debt value\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The estimated liquidation threshold is ~155% of the debt value\n"
+      "The estimated liquidation threshold is ~145% of the debt value\n"
      ]
     }
    ],
@@ -128,7 +128,7 @@
     "# We adjust the variance by adding the covariance of the aUSD/USD pair.\n",
     "corr = ausd_pair.returns.corrwith(btc_pair.returns)\n",
     "cov = corr * btc_pair.returns.std()[0] * ausd_pair.returns.std()[0]\n",
-    "# daily var scaled to a year, add 2*covariance and take the square root to get the std\n",
+    "# daily var, add 2*covariance and take the square root to get the std\n",
     "adj_btc_std = (btc_pair.returns.var()[0] + 2 * cov) ** 0.5\n",
     "\n",
     "# Initialize and run the simulation: Each path represents the price change of the collateral/debt\n",
@@ -136,7 +136,7 @@
     "# and assume a normal distribution (GBM) with the mean and std of bitcoin over the past 5 years\n",
     "sim = Simulation(btc_pair, strategy=\"GBM\")\n",
     "sim.simulate(steps=24,\n",
-    "             maturity=10,\n",
+    "             maturity=7,\n",
     "             n_simulations=10_000,\n",
     "             initial_value=1,\n",
     "             sigma=adj_btc_std[0],\n",
