improvement: made the computation of the threshold more verbose and added assumptions to the readme.

--- a/btc_ausd_analysis.ipynb
+++ b/btc_ausd_analysis.ipynb
@@ -66,14 +66,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The estimated liquidation threshold is ~169% of the debt value\n"
+      "The estimated liquidation threshold is ~144% of the debt value\n",
+      "The estimated premium redeem threshold is ~173% of the debt value\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We adjust the variance by adding the covariance of the aUSD/USD pair.\n",
+    "corr = ausd_pair.returns.corrwith(btc_pair.returns)\n",
+    "cov = corr * btc_pair.returns.std()[0] * ausd_pair.returns.std()[0]\n",
+    "# daily var, add 2*covariance and take the square root to get the std\n",
+    "adj_btc_std = (btc_pair.returns.var()[0] + 2 * cov) ** 0.5\n",
+    "\n",
+    "# Initialize and run the simulation: Each path represents the price change of the collateral/debt\n",
+    "# We simulate 10,000 trajectories with a duration of 10 days and 24 hours each\n",
+    "# and assume a normal distribution (GBM) with the mean and std of bitcoin over the past 5 years\n",
+    "sim = Simulation(btc_pair, strategy=\"GBM\")\n",
+    "sim.simulate(steps=24,\n",
+    "             maturity=7,\n",
+    "             n_simulations=10_000,\n",
+    "             initial_value=1,\n",
+    "             sigma=adj_btc_std[0],\n",
+    "             mu=btc_pair.calculate_mean_return(type=\"arithmetic\", standardization_period=\"daily\"))\n",
+    "\n",
+    "\n",
+    "# Analize the results\n",
+    "# Initialize the analysis\n",
+    "simple_analysis = Analysis(sim)\n",
+    "\n",
+    "# This gives us the secure threshold multiplier, stating that:\n",
+    "# The collateral/debt ratio will fall below 1 only with a 0.1% chance in 10 days or...\n",
+    "# This assumes no premium redeem, additional collateralization or liquidation.\n",
+    "liquidation_threshold = simple_analysis.get_threshold_multiplier(alpha=0.999) # <- this can be changed ofc \n",
+    "premium_redeem_threshold_margin = simple_analysis.get_threshold_multiplier(alpha=0.90) # <- this can be changed ofc \n",
+    "\n",
+    "print(f\"The estimated liquidation threshold is ~{int(liquidation_threshold * 100)}% of the debt value\")\n",
+    "print(f\"The estimated premium redeem threshold is ~{int(liquidation_threshold * premium_redeem_threshold_margin * 100)}% of the debt value\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The estimated liquidation threshold is ~291% of the debt value\n"
      ]
     }
    ],
@@ -104,63 +151,10 @@
     "# This gives us the secure threshold multiplier, stating that:\n",
     "# The collateral/debt ratio will fall below 1 only with a 1% chance in 21 days or...\n",
     "# This assumes no premium redeem, additional collateralization or liquidation.\n",
-    "liquidation_threshold = simple_analysis.get_threshold_multiplier(alpha=0.99) # <- this can be changed ofc \n",
+    "secure_threshold_margin = simple_analysis.get_threshold_multiplier(alpha=0.99) # <- this can be changed ofc \n",
     "\n",
-    "print(f\"The estimated liquidation threshold is ~{int(liquidation_threshold * 100)}% of the debt value\")"
+    "print(f\"The estimated liquidation threshold is ~{int(liquidation_threshold * premium_redeem_threshold_margin * secure_threshold_margin * 100)}% of the debt value\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The estimated liquidation threshold is ~145% of the debt value\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "# This time we do the same process on a intraday basis\n",
-    "# We adjust the variance by adding the covariance of the aUSD/USD pair.\n",
-    "corr = ausd_pair.returns.corrwith(btc_pair.returns)\n",
-    "cov = corr * btc_pair.returns.std()[0] * ausd_pair.returns.std()[0]\n",
-    "# daily var, add 2*covariance and take the square root to get the std\n",
-    "adj_btc_std = (btc_pair.returns.var()[0] + 2 * cov) ** 0.5\n",
-    "\n",
-    "# Initialize and run the simulation: Each path represents the price change of the collateral/debt\n",
-    "# We simulate 10,000 trajectories with a duration of 10 days and 24 hours each\n",
-    "# and assume a normal distribution (GBM) with the mean and std of bitcoin over the past 5 years\n",
-    "sim = Simulation(btc_pair, strategy=\"GBM\")\n",
-    "sim.simulate(steps=24,\n",
-    "             maturity=7,\n",
-    "             n_simulations=10_000,\n",
-    "             initial_value=1,\n",
-    "             sigma=adj_btc_std[0],\n",
-    "             mu=btc_pair.calculate_mean_return(type=\"arithmetic\", standardization_period=\"daily\"))\n",
-    "\n",
-    "\n",
-    "# Analize the results\n",
-    "# Initialize the analysis\n",
-    "simple_analysis = Analysis(sim)\n",
-    "\n",
-    "# This gives us the secure threshold multiplier, stating that:\n",
-    "# The collateral/debt ratio will fall below 1 only with a 0.1% chance in 10 days or...\n",
-    "# This assumes no premium redeem, additional collateralization or liquidation.\n",
-    "liquidation_threshold = simple_analysis.get_threshold_multiplier(alpha=0.999) # <- this can be changed ofc \n",
-    "\n",
-    "print(f\"The estimated liquidation threshold is ~{int(liquidation_threshold * 100)}% of the debt value\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
