refactor: Refactored the process generation and amended the docs

--- a/btc_ausd_analysis.ipynb
+++ b/btc_ausd_analysis.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "aUSD/USD had an annualized std of 0.21117746112243832\n",
-      "aUSD/USD had an annualized mean return of -0.03614766099111966\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# %%\n",
     "from data.data_request import Token, Token_Pair\n",
@@ -35,18 +26,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "USD/BTC had an annualized std of 0.8147478220639823\n",
-      "USD/BTC had an annualized mean return of -0.3460269656052989\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# BTC is the debt in the system and if BTC increases in price, the over-collateralization ratio drops\n",
     "# To model this, we get the inverse price to have BTC as quote currency\n",
@@ -66,18 +48,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The estimated liquidation threshold is ~144% of the debt value\n",
-      "The estimated premium redeem threshold is ~173% of the debt value\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# We adjust the variance by adding the covariance of the aUSD/USD pair.\n",
     "corr = ausd_pair.returns.corrwith(btc_pair.returns)\n",
@@ -91,7 +64,7 @@
     "sim = Simulation(btc_pair, strategy=\"GBM\")\n",
     "sim.simulate(steps=24,\n",
     "             maturity=7,\n",
-    "             n_simulations=10_000,\n",
+    "             n_simulations=1_000,\n",
     "             initial_value=1,\n",
     "             sigma=adj_btc_std[0],\n",
     "             mu=btc_pair.calculate_mean_return(type=\"arithmetic\", standardization_period=\"daily\"))\n",
@@ -113,17 +86,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The estimated liquidation threshold is ~291% of the debt value\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# We adjust the variance by adding the covariance of the aUSD/USD pair.\n",
@@ -159,7 +124,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 ('collateralization-analysis-gRqjFBpx')",
+   "display_name": "Python 3.10.4 ('venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -173,12 +138,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "cc42073f12327550f2355876a56d3048797f9e26fef48a9a1337775e8ffa07f1"
+    "hash": "688ea516a2884bf8ec37e1dc5de3842806dbed6b9c0df617e96ed5229a48f522"
    }
   }
  },
