--- a/btc_ausd_analysis.ipynb
+++ b/btc_ausd_analysis.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aUSD/USD had an annualized std of 0.2022712321975992\n",
+      "aUSD/USD had an annualized mean return of -0.05262121397337438\n"
+     ]
+    }
+   ],
    "source": [
     "# %%\n",
     "from data.data_request import Token, Token_Pair\n",
@@ -26,9 +35,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "USD/BTC had an annualized std of 0.8142542867131449\n",
+      "USD/BTC had an annualized mean return of -0.3409107191184586\n"
+     ]
+    }
+   ],
    "source": [
     "# BTC is the debt in the system and if BTC increases in price, the over-collateralization ratio drops\n",
     "# To model this, we get the inverse price to have BTC as quote currency\n",
@@ -48,9 +66,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The estimated liquidation threshold is ~146% of the debt value\n",
+      "The estimated premium redeem threshold is ~176% of the debt value\n"
+     ]
+    }
+   ],
    "source": [
     "# We adjust the variance by adding the covariance of the aUSD/USD pair.\n",
     "corr = ausd_pair.returns.corrwith(btc_pair.returns)\n",
@@ -64,7 +91,7 @@
     "sim = Simulation(btc_pair, strategy=\"GBM\")\n",
     "sim.simulate(steps=24,\n",
     "             maturity=7,\n",
-    "             n_simulations=1_000,\n",
+    "             n_simulations=10_000,\n",
     "             initial_value=1,\n",
     "             sigma=adj_btc_std[0],\n",
     "             mu=btc_pair.calculate_mean_return(type=\"arithmetic\", standardization_period=\"daily\"))\n",
@@ -77,16 +104,16 @@
     "# This gives us the secure threshold multiplier, stating that:\n",
     "# The collateral/debt ratio will fall below 1 only with a 0.1% chance in 10 days or...\n",
     "# This assumes no premium redeem, additional collateralization or liquidation.\n",
-    "liquidation_threshold = simple_analysis.get_threshold_multiplier(alpha=0.999) # <- this can be changed ofc \n",
+    "liquidation_threshold_margin = simple_analysis.get_threshold_multiplier(alpha=0.999) # <- this can be changed ofc \n",
     "premium_redeem_threshold_margin = simple_analysis.get_threshold_multiplier(alpha=0.90) # <- this can be changed ofc \n",
     "\n",
-    "print(f\"The estimated liquidation threshold is ~{int(liquidation_threshold * 100)}% of the debt value\")\n",
-    "print(f\"The estimated premium redeem threshold is ~{int(liquidation_threshold * premium_redeem_threshold_margin * 100)}% of the debt value\")"
+    "print(f\"The estimated liquidation threshold is ~{int(liquidation_threshold_margin * 100)}% of the debt value\")\n",
+    "print(f\"The estimated premium redeem threshold is ~{int(liquidation_threshold_margin * premium_redeem_threshold_margin * 100)}% of the debt value\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,24 +134,47 @@
     "             initial_value=1,\n",
     "             sigma=adj_btc_std[0],\n",
     "             mu=btc_pair.calculate_mean_return(type=\"arithmetic\", standardization_period=\"daily\"))\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The estimated liquidation threshold is ~204% of the debt value\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "# Analize the results\n",
     "# Initialize the analysis\n",
     "simple_analysis = Analysis(sim)\n",
     "\n",
     "# This gives us the secure threshold multiplier, stating that:\n",
-    "# The collateral/debt ratio will fall below 1 only with a 1% chance in 21 days or...\n",
+    "# The collateral/debt ratio will fall below the liquidation_threshold_margin with a 10% chance in 21 days or...\n",
     "# This assumes no premium redeem, additional collateralization or liquidation.\n",
-    "secure_threshold_margin = simple_analysis.get_threshold_multiplier(alpha=0.99) # <- this can be changed ofc \n",
+    "secure_threshold_margin = simple_analysis.get_threshold_multiplier(alpha=0.90) # <- this can be changed ofc \n",
     "\n",
-    "print(f\"The estimated liquidation threshold is ~{int(liquidation_threshold * premium_redeem_threshold_margin * secure_threshold_margin * 100)}% of the debt value\")"
+    "print(f\"The estimated secure threshold is ~{int(liquidation_threshold_margin * secure_threshold_margin * 100)}% of the debt value\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('venv': venv)",
+   "display_name": "Python 3.10.5 ('collateralization-analysis-gRqjFBpx')",
    "language": "python",
    "name": "python3"
   },
@@ -138,12 +188,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "688ea516a2884bf8ec37e1dc5de3842806dbed6b9c0df617e96ed5229a48f522"
+    "hash": "cc42073f12327550f2355876a56d3048797f9e26fef48a9a1337775e8ffa07f1"
    }
   }
  },
