chore: renamed README

--- a/btc_ausd_analysis.ipynb
+++ b/btc_ausd_analysis.ipynb
@@ -66,15 +66,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The estimated liquidation threshold is ~146% of the debt value\n",
-      "The estimated premium redeem threshold is ~176% of the debt value\n"
+      "The estimated liquidation threshold is ~158% of the debt value\n",
+      "The estimated premium redeem threshold is ~190% of the debt value\n"
      ]
     }
    ],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,14 +139,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The estimated liquidation threshold is ~204% of the debt value\n"
+      "The estimated secure threshold is ~222% of the debt value\n"
      ]
     }
    ],
