--- a/btc_ausd_analysis.ipynb
+++ b/btc_ausd_analysis.ipynb
@@ -9,8 +9,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "aUSD/USD had an annualized std of 0.21050053774519478\n",
-      "aUSD/USD had an annualized mean return of -0.07836015912397953\n"
+      "aUSD/USD had an annualized std of 0.2022712321975992\n",
+      "aUSD/USD had an annualized mean return of -0.05262121397337438\n"
      ]
     }
    ],
@@ -42,8 +42,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "USD/BTC had an annualized std of 0.8137701117680453\n",
-      "USD/BTC had an annualized mean return of -0.3516283023472878\n"
+      "USD/BTC had an annualized std of 0.8142542867131449\n",
+      "USD/BTC had an annualized mean return of -0.3409107191184586\n"
      ]
     }
    ],
@@ -66,15 +66,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The estimated liquidation threshold is ~146% of the debt value\n",
-      "The estimated premium redeem threshold is ~176% of the debt value\n"
+      "The estimated liquidation threshold is ~158% of the debt value\n",
+      "The estimated premium redeem threshold is ~190% of the debt value\n"
      ]
     }
    ],
@@ -86,7 +86,7 @@
     "adj_btc_std = (btc_pair.returns.var()[0] + 2 * cov) ** 0.5\n",
     "\n",
     "# Initialize and run the simulation: Each path represents the price change of the collateral/debt\n",
-    "# We simulate 10,000 trajectories with a duration of 7 days and 24 hours each\n",
+    "# We simulate 10,000 trajectories with a duration of 10 days and 24 hours each\n",
     "# and assume a normal distribution (GBM) with the mean and std of bitcoin over the past 5 years\n",
     "sim = Simulation(btc_pair, strategy=\"GBM\")\n",
     "sim.simulate(steps=24,\n",
@@ -102,7 +102,7 @@
     "simple_analysis = Analysis(sim)\n",
     "\n",
     "# This gives us the secure threshold multiplier, stating that:\n",
-    "# The collateral/debt ratio will fall below 1 only with a 0.1% chance in 7 days or...\n",
+    "# The collateral/debt ratio will fall below 1 only with a 0.1% chance in 10 days or...\n",
     "# This assumes no premium redeem, additional collateralization or liquidation.\n",
     "liquidation_threshold_margin = simple_analysis.get_threshold_multiplier(alpha=0.999) # <- this can be changed ofc \n",
     "premium_redeem_threshold_margin = simple_analysis.get_threshold_multiplier(alpha=0.90) # <- this can be changed ofc \n",
@@ -113,12 +113,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "# We adjust the variance by adding the covariance of the aUSD/USD pair.\n",
+    "corr = ausd_pair.returns.corrwith(btc_pair.returns)\n",
+    "cov = corr * btc_pair.returns.std()[0] * ausd_pair.returns.std()[0]\n",
+    "# daily var, add 2*covariance and take the square root to get the std\n",
+    "adj_btc_std = (btc_pair.returns.var()[0] + 2 * cov) ** 0.5\n",
+    "\n",
     "# Initialize and run the simulation: Each path represents the price change of the collateral/debt\n",
-    "# We simulate 10,000 trajectories with a duration of 21 days and 24 hours each\n",
+    "# We simulate 10,000 trajectories with a duration of 10 days and 24 hours each\n",
     "# and assume a normal distribution (GBM) with the mean and std of bitcoin over the past 5 years\n",
     "sim = Simulation(btc_pair, strategy=\"GBM\")\n",
     "sim.simulate(steps=24,\n",
@@ -132,14 +139,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The estimated liquidation threshold is ~204% of the debt value\n"
+      "The estimated secure threshold is ~222% of the debt value\n"
      ]
     }
    ],
@@ -167,7 +174,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 ('collateralization-analysis-gRqjFBpx')",
+   "display_name": "Python 3.10.4 ('venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -181,12 +188,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "cc42073f12327550f2355876a56d3048797f9e26fef48a9a1337775e8ffa07f1"
+    "hash": "688ea516a2884bf8ec37e1dc5de3842806dbed6b9c0df617e96ed5229a48f522"
    }
   }
  },
